add successful register screen. add spinner indicator for http requests.

--- a/src/app/components/register/phases/register-step-address/register-step-address.component.html
+++ b/src/app/components/register/phases/register-step-address/register-step-address.component.html
@@ -22,7 +22,7 @@
           <input id="streetNumber" pInputText formControlName="streetNumber"
             [ngClass]="{'is-invalid': form.hasError('inconsistentStreetNumber') }" />
           <label [ngClass]="{'is-invalid': form.hasError('inconsistentStreetNumber') }" for="streetNumber">Carrer,
-            número <span class="mandatory-decorator">*</span></label>
+            número</label>
         </p-floatlabel>
 
         <p-floatlabel variant="on">
