--- a/src/app/components/dummy/landing/landing.component.html
+++ b/src/app/components/dummy/landing/landing.component.html
@@ -1,3 +1,3 @@
-<a href="/login">LOGIN</a>
+<a routerLink="/login">LOGIN</a>
 <br>
-<a href="register">REGISTER</a>
+<a routerLink="/register">REGISTER</a>
