--- a/src/app/components/register/register-main/register-main.component.scss
+++ b/src/app/components/register/register-main/register-main.component.scss
@@ -126,6 +126,11 @@
       width: 100%;
       height: 100%;
 
+      .app-success {
+        width: 100%;
+        height: 100%;
+      }
+
       .phase1-footer {
         display: flex;
         padding-top: 20px;
