--- a/src/app/components/register/register-main/register-main.component.scss
+++ b/src/app/components/register/register-main/register-main.component.scss
@@ -145,6 +145,11 @@
         .back-btn {
           margin-right: auto;
         }
+
+        ::ng-deep .p-button {
+          width: 123px;
+          height: 42px;
+        }
       }
     }
   }
