--- a/src/app/components/shop/shop-header/shop-header.component.scss
+++ b/src/app/components/shop/shop-header/shop-header.component.scss
@@ -1,66 +1,67 @@
 .header-root {
+  display: flex;
+  width: 100vw;
+  padding: 10px 80px;
+  justify-content: space-between;
+  align-items: center;
+  height: 72px;
+
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(15px);
+
+  .header-title {
     display: flex;
-    width: 100vw;
-    padding: 40px 80px;
-    justify-content: space-between;
     align-items: center;
+    gap: 16px;
 
-    background: rgba(255, 255, 255, 0.15);
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(15px);
+    // typ
+    color: #ff5255;
+    font-family: Inter;
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    /* 100% */
 
-    .header-title {
-        display: flex;
-        align-items: center;
-        gap: 16px;
+    svg {
+      width: 28px;
+      height: 28px;
+      aspect-ratio: 1/1;
+    }
+  }
 
-        // typ
-        color: #FF5255;
-        font-family: Inter;
-        font-size: 96px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 96px;
-        /* 100% */
+  .header-icons {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    .cart {
+      display: flex;
+      width: 32px;
+      height: 32px;
+      padding: 3px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      aspect-ratio: 1/1;
 
-        svg {
-            width: 48px;
-            height: 48px;
-            aspect-ratio: 1/1;
-        }
+      svg {
+        width: 26px;
+        height: 26px;
+        flex-shrink: 0;
+
+        stroke-width: 2px;
+        stroke: #262626;
+      }
     }
 
-    .header-icons {
-        display: flex;
-        align-items: center;
-        gap: 30px;
-        .cart {
-            display: flex;
-            width: 54px;
-            height: 64px;
-            padding: 3px;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-
-            svg {
-                width: 33.4px;
-                height: 33.25px;
-                flex-shrink: 0;
-
-                stroke-width: 2px;
-                stroke: #262626;
-
-            }
-        }
-
-        .person {
-            svg {
-                width: 40px;
-                height: 40px;
-                aspect-ratio: 1/1;
-            }
-        }
+    .person {
+      svg {
+        width: 32px;
+        height: 32px;
+        aspect-ratio: 1/1;
+      }
     }
+  }
 }
