--- a/src/app/components/shop/item-card/item-card.component.html
+++ b/src/app/components/shop/item-card/item-card.component.html
@@ -2,16 +2,24 @@
   <div class="item-card-inner">
     <div class="item-card-objects">
       <div class="item-card-image">
-        <!-- Dinamically loaded image -->
-        <img src="https://dummyimage.com/195x195/000/fff" alt="whatever">
-        <!-- This should have color selectors on top -->
+        <img [src]="currentImage" alt="whatever">
+        <div class="item-card-color-selectors">
+          @if (item.colors.length > 1) {
+          @for (color of item.colors; track $index) {
+          <div class="selector">
+            <svg width="18" height="18" viewBox="-1 -1 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16Z"
+                [attr.fill]="blendWithWhite(color.color)" stroke="white" stroke-width="1" />
+            </svg>
+          </div>
+          }
+          }
+        </div>
       </div>
       <div class="item-card-details">
-        <!-- Dinamycally loaded title -->
-        <div class="title"> Dessuadora tres caps </div>
-        <!-- Dinamically loaded price -->
-        <div class="price"> 9.95 €</div>
+        <div class="title"> {{ item.title }} </div>
+        <div class="price"> {{item.price}} €</div>
       </div>
     </div>
   </div>
-</div>
