modify alternative item colors

--- a/src/app/components/shop/item-card/item-card.component.scss
+++ b/src/app/components/shop/item-card/item-card.component.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    // min-height: 373px;
 
     border-radius: 32px;
     background: #fff;
@@ -37,17 +38,22 @@
         img {
           border-radius: 8px;
         }
+      }
 
-        .item-card-color-selectors {
-          position: absolute;
-          bottom: 16px;
-          left: 50%;
-          transform: translateX(-50%);
+      .item-card-color-selectors {
+        display: flex;
+        gap: 16px;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        min-height: 22px;
 
-          display: flex;
-          gap: 16px;
-          align-self: stretch;
-          justify-content: center;
+        .selector {
+          cursor: pointer;
+
+          &:hover {
+            opacity: 0.7;
+          }
         }
       }
 
