--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+
 @font-face {
   font-family: "Inter";
   src: url("/assets/fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype");
