--- a/src/app/components/shop/item-card/item-card.component.html
+++ b/src/app/components/shop/item-card/item-card.component.html
@@ -2,16 +2,16 @@
   <div class="item-card-inner">
     <div class="item-card-objects">
       <div class="item-card-image">
-        <img [src]="currentImage" alt="whatever">
+        <img [src]="currentImage" alt="item">
       </div>
       <div class="item-card-color-selectors" (mouseleave)="resetPreview()">
-        @if (item.colors.length > 1) {
-        @for (color of item.colors; track $index) {
-        <div class="selector" (click)="selectColor(color); $event.stopPropagation()" (mouseenter)="previewColor(color)">
+        @if (filterUniqueColors(item.attributes).length > 1) {
+        @for (attribute of filterUniqueColors(item.attributes); track $index) {
+        <div class="selector" (click)="selectColor(attribute); $event.stopPropagation()" (mouseenter)="previewColor(attribute)">
           <svg width="18" height="18" viewBox="-1 -1 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16Z"
-              [attr.fill]="blendWithWhite(color.color)" stroke="#D3D3D3" stroke-width="1" />
+              [attr.fill]="blendWithWhite(attribute.color.color)" stroke="#D3D3D3" stroke-width="1" />
           </svg>
         </div>
         }
