--- a/src/app/components/shop/shop-body/shop-body.component.html
+++ b/src/app/components/shop/shop-body/shop-body.component.html
@@ -6,9 +6,10 @@
   </div>
 </div>
 
+@if (selectedItem) {
 <p-dialog maskStyleClass="backdrop-blur-sm" [modal]="true" [(visible)]="displayDialog">
   <ng-template #headless>
     <app-shop-popup [itemDto]="selectedItem"></app-shop-popup>
-
   </ng-template>
 </p-dialog>
+}
