--- a/src/app/components/shop/shop-body/shop-popup/shop-popup.component.html
+++ b/src/app/components/shop/shop-body/shop-popup/shop-popup.component.html
@@ -1,6 +1,7 @@
 <div class="main-product">
     <div class="product-close">
-        <svg (click)="closeIconClick()" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg (click)="closeIconClick()" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
             <path d="M3.48528 20.4558L20.4558 3.48528M3.48528 3.48528L20.4558 20.4558" stroke="#262626" stroke-width="2"
                 stroke-linecap="round" stroke-linejoin="round" />
         </svg>
@@ -8,26 +9,25 @@
 
     <div class="product-body">
         <div class="galleria">
-
             <!-- MULTIPLE COLOR OPTION -->
-             @if (isMultiColor()) {
+            @if (isMultiColor()) {
             @for (color of itemDto.colors; track $index) {
-                @if (color === selectedColor) {
+            @if (color === selectedColor) {
             <p-galleria [value]="color.images" [responsiveOptions]="responsiveOptions" [style]="{'width': '100%'}"
-                [numVisible]="5"  showItemNavigators="true" >
+                [numVisible]="5" showItemNavigators="true">
                 <ng-template #item let-item>
-                    <img [src]="item.url" style="width:80%; height:auto;" />
+                    <img [src]="item.url"  style="width:80%; height:auto;" />
                 </ng-template>
                 <ng-template #thumbnail let-item>
                     <img [src]="item.url" style="width:80px; height:auto;" />
                 </ng-template>
             </p-galleria>
-                }
             }
-             } @else {
-                <!-- SINGLE COLOR OPTION -->
+            }
+            } @else {
+            <!-- SINGLE COLOR OPTION -->
             <p-galleria [value]="itemDto.images" [responsiveOptions]="responsiveOptions" [style]="{'width': '100%'}"
-                [numVisible]="5"  showItemNavigators="true" >
+                [numVisible]="5" showItemNavigators="true">
                 <ng-template #item let-item>
                     <img [src]="item.url" style="width:80%; height:auto;" />
                 </ng-template>
@@ -36,7 +36,7 @@
                     <img [src]="item.url" style="width:80px; height:auto;" />
                 </ng-template>
             </p-galleria>
-             }
+            }
 
         </div>
         <div class="details">
@@ -53,7 +53,8 @@
                     <span class="details-subtitle">Mesura:</span>
                     <div class="details-meas-list">
                         @for (size of itemDto.sizes; track $index) {
-                        <div class="details-meas-item">
+                        <div class="details-meas-item" (click)="selectSize(size)"
+                            [ngClass]="{ 'selected': size === selectedSize }">
                             {{size.size}}
                         </div>
                         }
